[gd_scene load_steps=6 format=2]

[ext_resource path="res://Tilesheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/Door.gd" type="Script" id=2]
[ext_resource path="res://sounds/open_door.wav" type="AudioStream" id=3]
[ext_resource path="res://animations/door.open.tres" type="Animation" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[node name="Door" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Closed" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 485

[node name="Opened" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 488

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/door.open = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color( 0, 0, 0, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
